objects/CustomProfileView__c.object
<CustomObject>
    <fields>
        <fullName>GroupingLogic__c</fullName>
        <label>GroupingLogic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnlyMyRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OnlyMyRecords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SelectFields__c</fullName>
        <defaultValue>&apos;Name,Last_Name__c,Email__c,Phone__c&apos;</defaultValue>
        <label>SelectFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WhereClauses__c</fullName>
        <label>WhereClauses</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isAvailableForAll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAvailableForAll</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>